--- a/README
+++ b/README
@@ -4,3 +4,6 @@ $ repo sync
 temporary fix to build:
 $ install -d prebuilt/android-arm/kernel
   curl -o prebuilt/android-arm/kernel/LINUX_KERNEL_COPYING -O https://raw.github.com/ezterry/kernel-biff-testing/ezgb-2636/COPYING
+
+Build
+  . build/envsetup.sh && brunch aokp_$TARGET_DEVICE-userdebug
